crates/aranya-policy-compiler/tests/data/structs/duplicate_struct_fact_already_defined_2.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `Foo` is defined multiple times
  |
1 | fact Foo[]=>{}
  |      --- previous defintion here
2 | struct Foo {}
  |        ^^^ re-defined here
